--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/metastore_db/
+/dataset/parquet/
+derby.log
+workspace.code-workspace
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
